<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SGit</string>
    <string name="default_text">Default Text</string>
    <string name="title_clone_repo">Clone Repository</string>
    <string name="preference_file_key" translatable="false">me.sheimi.sgit</string>

    <!-- action -->
    <string name="action_search">Search</string>
    <string name="action_donate">Donate</string>
    <string name="action_clone">Clone</string>
    <string name="action_import_repo">Import Repository</string>
    <string name="action_git_profile">Git Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage_private_key">Private Keys</string>
    <string name="action_add_private_key">Add Key</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_choose_language">Choose Language</string>
    <string name="action_mode_diff">Diff</string>
    <string name="action_open_in_other_app">Open in other apps</string>
    <string name="action_edit_in_other_app">Edit in other apps</string>
    <string name="action_reset">Reset</string>
    <string name="action_toggle_drawer">Toggle Drawer</string>
    <string name="action_copy_commit_str">Copy Commit Hash</string>
    <string name="action_create_external_repo">Create External Repo</string>

    <!-- label msg -->
    <string name="label_ok">OK</string>
    <string name="label_remote_url">Remote URL</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_clone">Clone</string>
    <string name="label_delete">Delete</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_new_file_name">New Filename</string>
    <string name="label_rename">Rename</string>
    <string name="label_send_feedback">Send Feedback</string>
    <string name="label_import">Import</string>
    <string name="label_push">Push</string>
    <string name="label_push_all">Push All</string>
    <string name="label_create">Create</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_git_name">Name</string>
    <string name="label_git_email">Email</string>
    <string name="label_done">Done</string>
    <string name="label_choose_app_to_open">Open With …</string>
    <string name="label_choose_app_to_edit">Edit With …</string>

    <!-- for title -->
    <string name="title_activity_repo_detail">Repository</string>
    <string name="title_activity_import_repository">Import Repository</string>
    <string name="title_activity_view_file">File: </string>
    <string name="title_activity_commit_diff">Diff:   </string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="tab_files_label">Files</string>
    <string name="tab_commits_label">Commits</string>
    <string name="tab_status_label">Status</string>

    <!-- Dialog Msg -->
    <string name="dialog_choose_branch_title">Choose Branch</string>
    <string name="dialog_choose_option">Choose option...</string>
    <string name="dialog_rename_repo_title">Rename Repository</string>
    <string name="dialog_rename_repo_hint">Repository Name</string>
    <string name="dialog_delete_repo_title">Delete Confirmation</string>
    <string name="dialog_delete_repo_msg">Are you sure you want to delete this repository?</string>
    <string name="dialog_rename_key_title">Rename</string>
    <string name="dialog_choose_language_title">Choose Language</string>
    <string name="dialog_comfirm_import_repo_title">Import Repository</string>
    <string name="dialog_comfirm_import_repo_msg">Are you sure you want to import this repository?</string>
    <string name="dialog_merge_title">Choose Branch To Merge</string>
    <string name="dialog_merge_checkbox">Commit after merge</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_file_delete_msg">Are you sure you want to delete this file or directory from working directory?</string>
    <string name="dialog_file_remove_cached">Remove Cached File</string>
    <string name="dialog_file_remove_cached_msg">Are you sure you want to delete this file or directory from index?</string>
    <string name="dialog_file_remove_force">Remove Force File</string>
    <string name="dialog_file_remove_force_msg">Are you sure you want to delete this file or directory from working directory and index?</string>

    <string name="dialog_reset_commit_title">Reset Changes</string>
    <string name="dialog_reset_commit_msg">Are you sure you want to discard all the changes?</string>
    <string name="dialog_create_dir_title">New Directory</string>
    <string name="dialog_create_dir_hint">Directory Name</string>
    <string name="dialog_create_file_title">New File</string>
    <string name="dialog_create_file_hint">File Name</string>
    <string name="dialog_comfirm_checkout_commit_title">Confirm Checkout</string>
    <string name="dialog_comfirm_checkout_commit_msg">Checkout Branch</string>
    <string name="dialog_profile_git_profile_title">Git Profile</string>
    <string name="dialog_prompt_for_password_title">Needs Authentication</string>
    <string name="dialog_prompt_for_password_title_auth_fail">Authentication Failed</string>
    <string name="dialog_prompt_for_password_checkbox">Save username and password</string>
    <string name="dialog_title_you_want_to">You want to …</string>
    <string name="dialog_create_branch_title">Create new branch</string>
    <string name="dialog_create_branch_hint">BranchName</string>
    <string name="dialog_clone_recursive">Clone recursively</string>

    <!-- Others -->
    <string name="pull_msg_init">Pulling … </string>
    <string name="progress_left_init">0%</string>
    <string name="progress_right_init">0/0</string>
    <string name="push_msg_init">Pushing … </string>
    <string name="title_activity_private_key_manage">Manage Private Keys</string>
    <string name="hello_world">Hello, World!</string>
    <string name="title_activity_explore_file">Explore Files</string>

    <!-- toast msg -->
    <string name="feedback_subject">Feedback</string>
    <string name="action_edit">Edit</string>
    <string name="alert_have_paid">Ads have been removed</string>
</resources>
