<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_content_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_clone"/>
    <item
        android:id="@+id/action_import_repo"
        android:showAsAction="never"
        android:title="@string/action_import_repo"/>
    <item
        android:id="@+id/action_git_profile"
        android:showAsAction="never"
        android:title="@string/action_git_profile"/>
    <item
        android:id="@+id/action_add_private_key"
        android:showAsAction="never"
        android:title="@string/action_manage_private_key"/>
    <item
        android:id="@+id/action_feedback"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>
    <item
        android:id="@+id/action_donate"
        android:showAsAction="never"
        android:title="@string/action_donate"/>

    <!--
    TODO settings will be added in next release
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"/>
    -->

</menu>